tests/miniJava/pos/000767_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( new java ( ) ) System.out.println ( { } ) ; else if ( 0 ) { } else { } } }
