tests/miniJava/neg/004470_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( extends ) { return 0 ; } }
